# senai.exercicios

./: .gitignore  CMakeLists.txt  GEMINI.md  JORNADA_DO_MESTRE.md  LegacyExercises.cmake  Makefile  all_source_files.txt  atividades_files.txt  corrigir_usos.py  files_with_colors.txt  gerador-html  gerador-html.cpp  gerador-pdf  gerador-pdf.cpp  vcpkg.json
01-cpp-mastery/desafios-sa/SA-5-Desafio-5/: CMakeLists.txt  SA-5-Maestro-Memoria.cpp  SA-5-Maestro-Memoria.txt  SmartBuffer.h  Telemetria.h
01-cpp-mastery/level-01-iniciado/: CMakeLists.txt
01-cpp-mastery/level-01-iniciado/atividade-extra01/: CMakeLists.txt  atividade-extra01-vetores.cpp  atividade-extra01.txt
01-cpp-mastery/level-01-iniciado/atividade-extra02/: CMakeLists.txt  atividade-extra02.txt
01-cpp-mastery/level-01-iniciado/atividade-extra03/: CMakeLists.txt  atividade-extra03.cpp  atividade-extra03.txt
01-cpp-mastery/level-01-iniciado/atividade-extra04/: CMakeLists.txt  atividade-extra04  atividade-extra04.cpp  atividade-extra04.txt
01-cpp-mastery/level-01-iniciado/atividade-extra05/: CMakeLists.txt  atividade-extra05-saude  atividade-extra05-saude.cpp  atividade-extra05.txt
01-cpp-mastery/level-01-iniciado/atividade-extra06/: CMakeLists.txt  atividade-extra06-inventario.cpp  atividade-extra06.txt
01-cpp-mastery/level-01-iniciado/atividade-extra07/: CMakeLists.txt  atividade-extra07-ponto  atividade-extra07-ponto.cpp  atividade-extra07.txt
01-cpp-mastery/level-01-iniciado/atividade-extra08/: CMakeLists.txt  atividade-extra08-folha.cpp  atividade-extra08.txt
01-cpp-mastery/level-01-iniciado/atividade-extra09/: CMakeLists.txt  atividade-extra09-logistica.cpp  atividade-extra09.txt
01-cpp-mastery/level-01-iniciado/atividade-extra10/: CMakeLists.txt  atividade-extra10-seguranca  atividade-extra10-seguranca.cpp  atividade-extra10.txt  log_seguranca.txt
01-cpp-mastery/level-01-iniciado/atividade01/: CMakeLists.txt  atividade1-vetores  atividade1.txt
01-cpp-mastery/level-01-iniciado/atividade02/: CMakeLists.txt  atividade2-vetores.cpp  atividade2.txt
01-cpp-mastery/level-02-arquiteto/: CMakeLists.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra11/: CMakeLists.txt  GerenciadorAtendimento.cpp  GerenciadorAtendimento.h  atividade-extra11-atendimento.cpp  atividade-extra11.txt  pacientes.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra12/: CMakeLists.txt  GestorBiblioteca.cpp  GestorBiblioteca.h  atividade-extra12-biblioteca.cpp  atividade-extra12.txt  catalogo.txt  relatorio_dia.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra13/: CMakeLists.txt  GestorBiblioteca.cpp  GestorBiblioteca.h  atividade-extra13-excecoes.cpp  atividade-extra13.txt  catalogo.txt  relatorio_sessao.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra14/: CMakeLists.txt  InterfaceBiblioteca.cpp  InterfaceBiblioteca.h  atividade-extra14-estilos  atividade-extra14-estilos.cpp  atividade-extra14.txt  relatorio_final.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra15/: CMakeLists.txt  MotorFinanceiro.cpp  MotorFinanceiro.h  atividade-extra15-financeiro.cpp  atividade-extra15.txt  catalogo.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra16/: CMakeLists.txt  DRE_SESSAO.txt  MotorERP.cpp  MotorERP.h  atividade-extra16-erp  atividade-extra16-erp.cpp  atividade-extra16.txt  produtos.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra17/: CMakeLists.txt  MonitorSaude.cpp  MonitorSaude.h  atividade-extra17-saude  atividade-extra17-saude.cpp  atividade-extra17.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra18/: CMakeLists.txt  PacoteLogistico.cpp  PacoteLogistico.h  atividade-extra18-logistica  atividade-extra18-logistica.cpp  atividade-extra18.txt
01-cpp-mastery/level-02-arquiteto/atividade-extra19/: CMakeLists.txt  Produto.cpp  Produto.h  atividade-extra19-engenharia  atividade-extra19-estoque.cpp
01-cpp-mastery/level-02-arquiteto/atividade-extra20/: CMakeLists.txt  ContaBancaria.cpp  ContaBancaria.h  atividade-extra20-banco.cpp  atividade-extra20.txt  extrato_1001.txt  extrato_2002.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/: CMakeLists.txt
01-cpp-mastery/level-03-mestre-poo/atividade-extra21/: CMakeLists.txt  MaquinaAgricola.cpp  MaquinaAgricola.h  atividade-extra21-agro  atividade-extra21-agro.cpp  atividade-extra21.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/atividade-extra22/: Aeronave.cpp  Aeronave.h  CMakeLists.txt  atividade-extra22-aviacao  atividade-extra22-aviacao.cpp  atividade-extra22.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/atividade-extra23/: CMakeLists.txt  MetodoPagamento.cpp  MetodoPagamento.h  atividade-extra23-pagamentos.cpp  atividade-extra23.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/atividade-extra24/: CMakeLists.txt  Reserva.cpp  Reserva.h  SerVivo.cpp  SerVivo.h  atividade-extra24-ecossistema.cpp  atividade-extra24.txt  log_ecossistema.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/atividade-extra25/: CMakeLists.txt  ProdutoIndustrial.cpp  ProdutoIndustrial.h  atividade-extra25-refatoracao  atividade-extra25-refatoracao.cpp  atividade-extra25.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/atividade-extra26/: CMakeLists.txt  ForexEngine.h  atividade-extra26-templates  atividade-extra26-templates.cpp  atividade-extra26.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/atividade-extra27/: CMakeLists.txt  UnidadeDeCarga.h  atividade-extra27-templates-classe.cpp  atividade-extra27.txt  main.cpp
01-cpp-mastery/level-03-mestre-poo/atividade-extra28/: CMakeLists.txt  atividade-extra28-stl-map  atividade-extra28-stl-map.cpp  atividade-extra28.txt
01-cpp-mastery/level-03-mestre-poo/atividade-extra29/: CMakeLists.txt  atividade-extra29-trading.cpp  atividade-extra29.txt
01-cpp-mastery/level-03-mestre-poo/atividade-extra30/: CMakeLists.txt  atividade-extra30-factory.cpp  (+1 more)
01-cpp-mastery/level-04-elite/: CMakeLists.txt
12-poo-mastery/: CMakeLists.txt  RELATORIO_PEDAGOGICO_POO.md
12-poo-mastery/exercicios/: CMakeLists.txt
rust-mastery/: Cargo.toml  RELATORIO_PEDAGOGICO.md  drone_os.db  hub_global.db  skycargo_final.db
(+1855 files in other folders)
