[workspace]
members = [
    "exercicios/01-logistica-drone",
    "exercicios/02-triagem-encomendas",
    "exercicios/03-gestao-mensagens",
    "exercicios/SA-01-drone-resgate",
    "exercicios/04-emprestimo-telemetria",
    "exercicios/05-diagnostico-sensores",
    "exercicios/06-auditoria-logs",
    "exercicios/SA-02-hub-diagnostico",
    "exercicios/07-motor-hidraulico",
    "exercicios/08-gerenciador-payload",
    "exercicios/09-banco-dados-entregas",
    "exercicios/SA-03-logistica-central",
    "exercicios/10-traits-dispositivos",
    "exercicios/11-transmissao-generica",
    "exercicios/12-processamento-dados",
    "exercicios/SA-04-comando-central",
    "exercicios/13-dashboard-compartilhado",
    "exercicios/14-calibracao-dinamica",
    "exercicios/15-concorrencia-segura",
    "exercicios/SA-05-trafego-aereo",
    "exercicios/16-calculos-legados",
    "exercicios/17-buffer-compartilhado",
    "exercicios/18-lista-ligada",
    "exercicios/19-sobrecarga-operadores",
    "exercicios/20-type-states-drone",
    "exercicios/SA-06-fabrica-automata",
]
resolver = "2"
