add_subdirectory(atividade01)
add_subdirectory(atividade02)
add_subdirectory(atividade-extra03)
add_subdirectory(atividade-extra04)
add_subdirectory(atividade-extra05)
add_subdirectory(atividade-extra06)
add_subdirectory(atividade-extra07)
add_subdirectory(atividade-extra08)
add_subdirectory(atividade-extra09)
add_subdirectory(atividade-extra10)
