[package]
name = "nexus-lambda-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.9"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
