[package]
name = "SA-10-monumento-total"
version = "1.0.0"
edition = "2024"

[dependencies]
rusqlite = "0.32.0"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"

[build-dependencies]
cc = "1.0"
